@@ -1,3 +1,15 @@
+2017-03-15  Bruno Haible  <bruno@clisp.org>
+
+	Update to the newest gnulib.
+	Ran "make -f Makefile.devel build-aux-update gnulib-imported
+	build-prerequisites".
+	* build-aux/config.guess: Update from gnulib git.
+	* build-aux/snippet/*: Update from gnulib.
+	* gllib/*: Likewise.
+	* glm4/*: Likewise.
+	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
+	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
+
 2017-03-14  Sam Steingold  <sds@gnu.org>
 
 	Fix TRUENAME on /proc symlinks to very long paths.
